vcluster_versioned_docs/version-0.20.0/configure/vcluster-yaml/networking/advanced.mdx
---
title: Advanced Networking
sidebar_label: advanced
sidebar_position: 3
description: Configuration for advanced networking like cluster domain, fallback cluster, and Kubernetes proxy.
---

import NetworkingAdvanced from '@site/vcluster/_partials/config/networking/advanced.mdx'

Each vCluster has its own DNS service, which is CoreDNS by default. DNS allows pods in the virtual cluster to get the IP addresses of services that are also running in the virtual cluster. The syncer ensures that the intuitive naming logic of Kubernetes DNS names for services applies, and that users can connect to these DNS names, which map to the IP address of the synchronized services that are present in the host cluster.

However, this also means that you cannot directly access host services inside the virtual cluster via DNS. Host pods can only access virtual cluster services by their synced name. vCluster offers a feature to map services from the virtual cluster to the host cluster and vice versa.

**Fallback to Host DNS**

When you enable `fallbackHostCluster`, vCluster falls back to the host cluster's DNS for resolving domains. This is useful if the host cluster is using Istio or Dapr and the sidecar containers cannot connect to the central instance. It is also useful if you want to access the host cluster services from within the virtual cluster.

**`proxyKubelets`**

The `proxyKubelets` section replaces `--fake-kubelet-ips` and `--disable-fake-kubelets`. 

You may need to configure `proxyKubelets` for proper resolution of Kubelet metrics when using Prometheus.

{/*
`advanced.clusterDomain`:
- used in certificate generation
- looks like it also updates coredns resolution, according to this PR: https://github.com/loft-sh/vcluster/pull/870

`advanced.fallbackHostCluster`:
- seems pretty well covered by the above

`advanced.proxyKubelets`:
- appears to set `--fake-kubelet-ips` and `--disable-fake-kubelets`
- `advanced.proxyKubelets.ByIP` sets `--fake-kubelet-ips`
- `--disable-fake-kubelets` is set to `true` if both `proxyKubelets.ByIP` and `proxyKubelets.ByHostname` are `false`
- The only reason I've seen to use `--disable-fake-kubelets` is for Kubernetes conformance testing.
- `--fake-kubelet-ips` appears to be needed for proper resolution of kubelet metrics when using prometheus
- More information here: https://linear.app/loft/issue/ENG-1197/prometheus-not-discovering-vcluster-kubelets

28 March: (aimee) Russ' comments about functionality should be incorporated in the Go file
*/}

## Config reference

<NetworkingAdvanced/>